--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -21,7 +21,7 @@ jobs:
     - uses: actions/checkout@v2
 
     # Runs a single command using the runners shell
-    - name: copy file via ssh key
+    - name: copy sources via ssh key
       uses: appleboy/scp-action@master
       env:
         HOST: ${{ secrets.HOST }}
