--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -41,6 +41,7 @@ jobs:
         port: ${{ secrets.PORT }}
         script: |
           source /root/.bashrc
+          echo $TELEGRAM_BOT_TOKEN
           cd /code
           docker compose down
           docker-compose up 2>err 1>out &
