--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -35,15 +35,16 @@ jobs:
     - name: multiple command
       uses: appleboy/ssh-action@master
       env:
-        TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+        BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
         key: ${{ secrets.KEY }}
         port: ${{ secrets.PORT }}
-        envs: TELEGRAM_BOT_TOKEN
+        envs: BOT_TOKEN
         script: |
           echo $TELEGRAM_BOT_TOKEN
+          echo $BOT_TOKEN
           cd /code
           docker-compose down
-          docker-compose up 2>err 1>out &
+          TELEGRAM_BOT_TOKEN=$BOT_TOKEN docker-compose up 2>err 1>out &
